Closed
Bug 70014
Opened 24 years ago
Closed 24 years ago
DOM1 unable to get chOff attribute
Categories
(Core :: DOM: Core & HTML, defect)
Core
DOM: Core & HTML
Tracking
()
VERIFIED
FIXED
mozilla0.9
People
(Reporter: jcarpenter0524, Assigned: jst)
Details
(Whiteboard: [HAVE FIX])
Attachments
(2 files)
|
588 bytes,
text/html
|
Details | |
|
7.64 KB,
patch
|
Details | Diff | Splinter Review |
Overview Description:
chOff attribute can be accessed by using something like "...attributes[2]";
however it can't be found by just using chOff unless you specifically set it
through DOM.
Steps to Reproduce:
- see attached testcase
Actual Results:
DOM see's nothing when looking at the chOff attribute
Expected Results:
in this testcase, it should see 25
Build Date & Platform Bug Found:
2001-02-18-10-Mtrunk
Additional Builds and Platforms Tested On:
(other platforms unavailable to test currently...)
Additional Information:
| Reporter | ||
Comment 1•24 years ago
|
||
| Assignee | ||
Comment 2•24 years ago
|
||
This change fixes this problem, mis-spelled charoff in the atoms list.
Index: html/base/src/nsHTMLAtomList.h
===================================================================
RCS file: /cvsroot/mozilla/content/html/base/src/nsHTMLAtomList.h,v
retrieving revision 3.24
diff -u -r3.24 nsHTMLAtomList.h
--- nsHTMLAtomList.h 2001/02/15 13:22:20 3.24
+++ nsHTMLAtomList.h 2001/02/28 00:00:53
@@ -84,7 +84,7 @@
HTML_ATOM(charoff, "charoff")
HTML_ATOM(charset, "charset")
HTML_ATOM(checked, "checked")
-HTML_ATOM(choff, "choff")
+HTML_ATOM(choff, "charoff")
HTML_ATOM(cite, "cite")
HTML_ATOM(kClass, "class")
HTML_ATOM(classid, "classid")
OS: Windows NT → All
Hardware: PC → All
Whiteboard: [HAVE FIX]
Target Milestone: --- → mozilla0.9
| Assignee | ||
Updated•24 years ago
|
Component: DOM Level 1 → DOM HTML
| Assignee | ||
Comment 4•24 years ago
|
||
The latter fix looks better to me too (why did I not notice the dupe when it was
right there in the diff ;). I am just wondering why did DOM choose choff when it
accesses the charoff attribute... Anyway, r=heikki.
| Assignee | ||
Comment 6•24 years ago
|
||
My guess is that the DOM chose choff cause that's what IE implemented at the
time, why I don't know. Thanks for the review, Vidur sez sr=vidur.
| Assignee | ||
Comment 7•24 years ago
|
||
Fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 10•24 years ago
|
||
verified on build 2001-06-21-11.0.9.1 windows 2000 ..marking as verified
Status: RESOLVED → VERIFIED
Component: DOM: HTML → DOM: Core & HTML
QA Contact: stummala → general
You need to log in
before you can comment on or make changes to this bug.
Description
•