Fixing bug 70014. Making td.chOff use the correct atom when looking up the attribute 'charoff'. r=heikki@netscape.com, sr=vidur@netscape.com